--- a/hermes/assets/css/main.css
+++ b/hermes/assets/css/main.css
@@ -287,7 +287,7 @@
 }
 @media (max-width: 767px) {
   #contact .banner .row #contact-title {
-    margin-top: 1em;
+    margin-top: 0;
   }
 }
 #contact .banner .row #contact-address,
@@ -330,7 +330,7 @@
 }
 @media (max-width: 767px) {
   #disclaimer .banner .row #disclaimer-address {
-    margin-top: 3.5em;
+    margin-top: 0;
   }
 }
 #disclaimer .banner .row .online-contact-container {
@@ -683,6 +683,17 @@ body .bottom-shape {
 }
 body .bottom-shape img {
   width: 100%;
+}
+@media (max-width: 767px) {
+  body #home .banner,
+  body #services .banner,
+  body #about .banner,
+  body #application .banner,
+  body #contact .banner,
+  body #disclaimer .banner,
+  body #references .banner {
+    height: 230px;
+  }
 }
 .ui-loader {
   display: none !important;
